--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Events</h1>
-<p>All interesting events in your area!</p>
+<h1>Users</h1>
 
 <div id="events">
   <% @events.each do |event| %>
@@ -8,8 +7,4 @@
       <%= link_to "Show this event", event %>
     </p>
   <% end %>
-</div>
-
-<div>
-  <%= link_to "New event", new_event_path %>
 </div>
